Fix some broken css.

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -1680,7 +1680,7 @@ section.people-unaffiliated .list {
 
 // project page, contributors currently affiliated with LIL
 // have bolded names
-.project .people-gallery-item  .name {
+.project .gallery-item-person  .name {
   font-weight: bold;
 }
 
